--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser": "~11.2.1",
     "@angular/platform-browser-dynamic": "~11.2.1",
     "@angular/router": "~11.2.1",
+    "@ng-bootstrap/ng-bootstrap": "^9.1.3",
     "bootstrap": "^5.3.6",
     "bootswatch": "^4.6.0",
     "font-awesome": "^4.7.0",
